--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "css-loader": "^6.7.3",
+    "postcss-loader": "^7.0.2",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
@@ -21,7 +22,10 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^0.8.1",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wagmi": "^0.9.3"
   }
 }
