complete design integrated with rainbowkit wallet without contract interaction yet

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@rainbow-me/rainbowkit": "^0.8.1",
+    "bootstrap": "5.2.3",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
