--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "author": "Noah Figueras - github.com/noahfigueras",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --config webpack.config.dev.js",
+    "build": "webpack --config webpack.config.prod.js"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "postcss-loader": "^7.0.2",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.1",
@@ -29,5 +32,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "wagmi": "^0.9.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
