--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "webpack-dev-server --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js"
   },
+  "proxy": "http://localhost:4000",
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
