--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@rainbow-me/rainbowkit": "^0.8.1",
-    "bootstrap": "5.2.3",
+    "bootstrap": "^5.2.3",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8",
     "wagmi": "^0.9.3"
   },
   "browserslist": {
