--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@rainbow-me/rainbowkit": "^0.8.1",
     "bootstrap": "^5.2.3",
     "ethers": "^5.7.2",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-spinners": "^0.13.8",
+    "sass-loader": "^13.2.0",
     "wagmi": "^0.9.3"
   },
   "browserslist": {
